home page and developer detail page done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
 <div>
-  <nav class="navbar navbar-expand-sm">
-    <a href="#" class="navbar-brand">GitHub Users</a>
-    <ul class="navbar-nav mr-auto" routerLinkActive="active">
+  <nav class="navbar navbar-expand-sm custom-navbar">
+    <a href="#" class="navbar-brand rounded-5px p-1">GitHub Users</a>
+    <ul class="navbar-nav mr-auto rounded-5px" routerLinkActive="active">
       <li class="nav-item">
-        <a class="nav-link" routerLink="home">Home</a>
+        <a class="nav-link" routerLink="home" >Home</a>
       </li>
     </ul>
 
-    <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
+    <ul class="navbar-nav ml-auto rounded-5px" routerLinkActive="active" *ngIf="!loggedUser">
       <li class="nav-item">
-        <a class="nav-link" routerLink="login">Login</a>
+        <a class="nav-link" routerLink="login" >Login</a>
       </li>
     </ul>
 
-    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="profile">My Profile</a>
+    <ul class="navbar-nav ml-auto"  *ngIf="loggedUser">
+      <li class="nav-item rounded-5px">
+        <a class="nav-link" routerLink="profile" routerLinkActive="active">My Profile</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="home" (click)="logout()">LogOut</a>
+      <li class="nav-item rounded-5px">
+        <a class="nav-link" type="button" (click)="logout()">LogOut</a>
       </li>
     </ul>
   </nav>
