--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,1 +1,65 @@
-<p>home works!</p>
+<div class="container mb-5" >
+  <header class="rounded-5px p-3 mb-5">
+    <h2>Welcome to GitHub Users app</h2>
+  </header>
+
+  <div class="row mb-3 ml-3">
+    <div class="col-md-6">
+      <form [formGroup]="locationForm" (ngSubmit)="onSubmit()" class="form-login-register">
+        <div class="form-group">
+          <label for="token" class="font-weight-bold">Location of GitHub users</label>
+          <input type="text" id="token" formControlName="location" class="form-control" placeholder="Location" required>
+        </div>
+        <div class="form-group">
+          <label for="sortBy" class="font-weight-bold">Sort results by number of followers, repositories or when user joined GitHub</label>
+          <select id="sortBy" class="form-control" formControlName="sortBy">
+            <option *ngFor="let sortValue of userSortValues" [ngValue]="sortValue">
+              {{sortValue}}
+            </option>
+          </select>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!locationForm.valid">Search</button>
+      </form>
+    </div>
+    <div class="col-md-6">
+      <div class="octocat">
+        <a href="https://github.com/">
+          <img src="/assets/img/octocat.jpg" class="rounded-10px" >
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="users && users.length>0">
+    <div class="table-responsive" >
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+          <th>User Photo</th>
+          <th>Username</th>
+          <th>Number of repositories</th>
+          <th>Number of followers</th>
+        </tr>
+        </thead>
+
+        <tbody class="font-weight-bold">
+          <tr *ngFor="let user of users" routerLink="/detail/{{user.login}}">
+            <td class="photo">
+              <img [src]="user.avatar_url" class="rounded-10px">
+            </td>
+            <td>{{user.login}}</td>
+            <td>{{user.public_repos}}</td>
+            <td>{{user.followers}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <ngb-pagination [collectionSize]="totalUsers" [(page)]="page" [maxSize]="10" [pageSize]="5"
+                        [rotate]="true" [boundaryLinks]="true" (pageChange)="pageChanged($event)">
+
+        </ngb-pagination>
+    <div>
+  </div>
+</div>
