--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  text-align: center;
+  background: #ddf3f5;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ddf3f5, #b0deff, #ddf3f5);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ddf3f5, #b0deff, #ddf3f5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.rounded-5px {
+  border-radius: 5px;
+}
+
+.rounded-10px {
+  border-radius: 10px;
+}
