fixed pagination on detail page for repos and followers

--- a/src/app/detail/detail/detail.component.html
+++ b/src/app/detail/detail/detail.component.html
@@ -15,6 +15,9 @@
         <ul class="list-group text-left">
           <li class="list-group-item"><strong>Username: </strong>{{user.login}}</li>
           <li class="list-group-item"><strong>Number of public repositories:</strong> {{user.public_repos}}</li>
+          <li *ngIf="user.total_private_repos" class="list-group-item">
+            <strong>Number of private repositories:</strong> {{user.total_private_repos}}
+          </li>
           <li class="list-group-item"><strong>Number of followers:</strong> {{user.followers}}</li>
           <li class="list-group-item"><strong>Location: </strong>{{user.location}}</li>
           <li class="list-group-item"><strong>Company: </strong>{{user.company}}</li>
@@ -51,7 +54,7 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <ngb-pagination [collectionSize]="allRepos.length" [(page)]="pageRepo" [maxSize]="10" [pageSize]="5"
+                <ngb-pagination [collectionSize]="reposSize" [(page)]="pageRepo" [maxSize]="10" [pageSize]="perPage"
                                 [rotate]="true" [boundaryLinks]="true" (pageChange)="pageRepoChanged($event)">
 
                 </ngb-pagination>
@@ -86,7 +89,7 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <ngb-pagination [collectionSize]="allFollowers.length" [(page)]="pageFollow" [maxSize]="10" [pageSize]="5"
+                <ngb-pagination [collectionSize]="followersSize" [(page)]="pageFollow" [maxSize]="10" [pageSize]="perPage"
                                 [rotate]="true" [boundaryLinks]="true" (pageChange)="pageFollowChanged($event)">
                 </ngb-pagination>
               </div>
