--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<header>
+  <strong>Private page of logged in user</strong>
+</header>
+
+<app-detail [personalUserName]="userName"></app-detail>
