--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,24 @@ body {
 .rounded-10px {
   border-radius: 10px;
 }
+
+.container{
+  background-color: azure;
+  border-radius: 5px;
+}
+
+.photo {
+  width: 150px;
+  height: 150px;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+td {
+  vertical-align: middle;
+  cursor: pointer;
+}
+
