--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -33,7 +33,7 @@
   <div *ngIf="users && users.length>0">
     <div class="table-responsive" >
       <table class="table table-striped table-hover">
-        <thead>
+        <thead class="thead-light">
         <tr>
           <th>User Photo</th>
           <th>Username</th>
