--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -2,4 +2,40 @@
   <strong>Private page of logged in user</strong>
 </header>
 
+<hr>
 <app-detail [personalUserName]="userName"></app-detail>
+<hr>
+
+<h4 class="mb-3">GitHub Issues</h4>
+<div *ngIf="issues && issues.length>0">
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead class="thead-light">
+      <tr>
+        <th>Issue title</th>
+        <th>Repository</th>
+        <th>Issue GitHub URL</th>
+        <th>State</th>
+      </tr>
+      </thead>
+
+      <tbody class="font-weight-bold">
+      <tr *ngFor="let issue of issues" class="text-left">
+        <td>{{issue.title}}</td>
+        <td>{{issue.repository.name}}</td>
+        <td><a [href]="issue.html_url">{{issue.html_url}}</a></td>
+        <td>{{issue.state}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="d-flex justify-content-center">
+    <ngb-pagination [collectionSize]="issuesSizeCeil" [(page)]="pageIssue" [maxSize]="10" [pageSize]="perPage"
+                    [rotate]="true" [boundaryLinks]="true" (pageChange)="pageIssueChanged($event)">
+    </ngb-pagination>
+  </div>
+</div>
+<div *ngIf="!issues || issues.length==0" class="mb-5">
+  No issues
+</div>
