--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
     <ul class="navbar-nav ml-auto"  *ngIf="loggedUser">
       <li class="nav-item rounded-5px">
-        <a class="nav-link" routerLink="profile" routerLinkActive="active">My Profile</a>
+        <a class="nav-link" type="button" routerLink="profile" routerLinkActive="active">My Profile</a>
       </li>
       <li class="nav-item rounded-5px">
         <a class="nav-link" type="button" (click)="logout()">LogOut</a>
