--- a/src/app/detail/detail/detail.component.html
+++ b/src/app/detail/detail/detail.component.html
@@ -58,6 +58,14 @@
                                 [rotate]="true" [boundaryLinks]="true" (pageChange)="pageRepoChanged($event)">
                 </ngb-pagination>
               </div>
+              <div class="d-flex justify-content-center">
+                <div class="input-group w-25 mb-3">
+                  <div class="input-group-prepend">
+                    <button class="btn btn-outline-primary" type="button" (click)="gotoPageRepo(+inputPageRepo.value)">Go to page</button>
+                  </div>
+                  <input type="number" class="form-control" #inputPageRepo>
+                </div>
+              </div>
             </div>
             <div *ngIf="!repos || repos.length==0" class="mt-2">
               No repositories
@@ -94,6 +102,14 @@
                 <ngb-pagination [collectionSize]="followersSize" [(page)]="pageFollow" [maxSize]="10" [pageSize]="perPage"
                                 [rotate]="true" [boundaryLinks]="true" (pageChange)="pageFollowChanged($event)">
                 </ngb-pagination>
+              </div>
+              <div class="d-flex justify-content-center">
+                <div class="input-group w-50 mb-3">
+                  <div class="input-group-prepend">
+                    <button class="btn btn-outline-primary" type="button" (click)="gotoPageRepo(+inputPageFollow.value)">Go to page</button>
+                  </div>
+                  <input type="number" class="form-control" #inputPageFollow>
+                </div>
               </div>
             </div>
             <div *ngIf="!followers || followers.length==0" class="mt-5">
