--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -60,6 +60,14 @@
                         [rotate]="true" [boundaryLinks]="true" (pageChange)="pageChanged($event)">
 
         </ngb-pagination>
-    <div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="input-group w-25 mb-3">
+        <div class="input-group-prepend">
+          <button class="btn btn-outline-primary" type="button" (click)="gotoPage(+inputPage.value)">Go to page</button>
+        </div>
+        <input type="number" class="form-control" #inputPage>
+      </div>
+    </div>
   </div>
 </div>
