--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -32,9 +32,17 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <ngb-pagination [collectionSize]="issuesSizeCeil" [(page)]="pageIssue" [maxSize]="10" [pageSize]="perPage"
+      <ngb-pagination [collectionSize]="issuesSizeCeil" [(page)]="page" [maxSize]="10" [pageSize]="perPage"
                       [rotate]="true" [boundaryLinks]="true" (pageChange)="pageIssueChanged($event)">
       </ngb-pagination>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="input-group w-25 mb-3">
+        <div class="input-group-prepend">
+          <button class="btn btn-outline-primary" type="button" (click)="gotoPage(+inputPage.value)">Go to page</button>
+        </div>
+        <input type="number" class="form-control" #inputPage>
+      </div>
     </div>
   </div>
   <div *ngIf="!issues || issues.length==0" class="mb-5">
