--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -11,7 +11,7 @@
           <input type="text" id="token" formControlName="location" class="form-control" placeholder="Location" required>
         </div>
         <div class="form-group">
-          <label for="sortBy" class="font-weight-bold">Sort results by number of followers, repositories or when user joined GitHub</label>
+          <label for="sortBy" class="font-weight-bold">Sort results by number of followers, repositories or when a user joined GitHub</label>
           <select id="sortBy" class="form-control" formControlName="sortBy">
             <option *ngFor="let sortValue of userSortValues" [ngValue]="sortValue">
               {{sortValue}}
