--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,11 +1,12 @@
 <div class="col-md-12 rounded-5px p-5">
   <div class="card card-background">
-    <form *ngIf="!isLoggedIn" [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-login-register">
-      <h3 class="mb-3 mt-5 font-weight-normal">Please login</h3>
-      <h6 class="mb-5">
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-login-register">
+      <h3 class="mb-3 mt-5 font-weight-normal">Login with GitHub Personal Access Token</h3>
+      <h6 class="mb-3">
        If you do not have or do not know your GitHub Personal Access Token, you can generate one <a href="https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token">here</a>.
       </h6>
-      <div class="form-group required">
+      <div class="d-flex justify-content-center">
+      <div class="form-group required w-75">
         <input type="text" id="token" formControlName="token" class="form-control" placeholder="Your GitHub Personal Access Token" required>
         <div *ngIf="userForm.controls['token'].invalid &&
             (userForm.controls['token'].dirty || userForm.controls['token'].touched)" class="alert alert-danger">
@@ -14,9 +15,25 @@
           </div>
         </div>
       </div>
+      </div>
 
-      <button class="btn btn-lg btn-primary btn-block mb-3" type="submit" [disabled]="!userForm.valid">Login</button>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-lg btn-primary btn-block mb-5 w-50" type="submit" [disabled]="!userForm.valid">Login</button>
+      </div>
     </form>
+
+    <hr>
+
+    <h3 class="mb-3 mt-5 font-weight-normal">Login with GitHub account via OAuth 2.0</h3>
+    <h6 class="mb-3">
+      You will be redirected to GitHub login page. If you do not have a GitHub account you must create one to proceed.
+    </h6>
+
+    <div class="d-flex justify-content-center">
+      <button class="btn btn-lg btn-primary btn-block mb-5 w-50" (click)="loginOAuth()">Login with GitHub
+        <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+      </button>
+    </div>
   </div>
 </div>
 
