fix of gotoPageFollow method

--- a/src/app/detail/detail/detail.component.html
+++ b/src/app/detail/detail/detail.component.html
@@ -106,7 +106,7 @@
               <div class="d-flex justify-content-center">
                 <div class="input-group w-50 mb-3">
                   <div class="input-group-prepend">
-                    <button class="btn btn-outline-primary" type="button" (click)="gotoPageRepo(+inputPageFollow.value)">Go to page</button>
+                    <button class="btn btn-outline-primary" type="button" (click)="gotoPageFollow(+inputPageFollow.value)">Go to page</button>
                   </div>
                   <input type="number" class="form-control" #inputPageFollow>
                 </div>
